[package]
name = "gfx-mesh"
version = "0.1.0"
authors = ["Zakarum <scareaangel@gmail.com>"]
description = "Helper crate for gfx-hal to create and use meshes with vertex semantic"
keywords = ["gfx", "gfx-hal", "graphics"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/omni-viral/gfx-mesh.git"
documentation = "https://docs.rs/crate/gfx-mesh/0.1.0/gfx-mesh"

[dependencies]
failure = "0.1"
gfx-hal = { version = "0.1", git = "https://github.com/gfx-rs/gfx", rev = "6cb2a800b" }
gfx-render = { git = "https://github.com/gfx-rs/gfx-render", rev = "8e475a3" }
serde = { version = "1.0", optional = true }

[target.'cfg(features = "serde")'.dependencies]
smallvec = { version = "0.6", features = ["serde"] }

[target.'cfg(not(features = "serde"))'.dependencies]
smallvec = { version = "0.6" }
